--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,3 +1,2 @@
 pandas==2.1.4
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9                                                 
+redshift_connector==2.1.2                                                 
