--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,2 +1,8 @@
 pandas==2.1.4
-redshift_connector==2.1.2                                                 
+redshift_connector==2.1.2
+numpy
+scikit-learn
+s3fs==2024.6.0
+st-files-connection
+boto3==1.34.132
+joblib== 1.4.2
