--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -4,7 +4,7 @@ numpy
 scikit-learn
 s3fs==2024.6.0
 st-files-connection
-boto3==1.34.132
-joblib== 1.4.2
-botocore>=1.34.132,<1.35.0
-aiobotocore>=2.13.1
+boto3==1.26.0
+joblib==1.4.2
+botocore==1.29.0
+aiobotocore==2.4.0
